testsuite/tests/patsyn/should_fail/T9705-1.stderr

T9705-1.hs:3:5: error: [GHC-69248]
    Pattern synonyms not allowed in class declaration:
      pattern P = ()
